# MacOS-Subsystem-for-Linux

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  options.cmake
.github/workflows/: release.yml
VirtualizationKit/: BootLoader.swift  CMakeLists.txt  Configure.swift  Delegate.swift  NetworkDevice.swift  StorageDevice.swift  TerminalSerial.swift  VirtualKit.swift  VirtualSystem.swift  hikit.swift  virtualkit.swift
lib/: libHiKit.dylib
src/: app.swift  hello.swift  main.swift  version.swift
swift/: VirtualizationKit.swiftdoc  VirtualizationKit.swiftmodule  VirtualizationKit.swiftsourceinfo
